--- a/todolist/todolist.html
+++ b/todolist/todolist.html
@@ -7,8 +7,15 @@
     <link rel="stylesheet" href="todolist.css">
 </head>
 <body>
-  <div class="outer"></div>
-   
+  <div class="notepad">
+    <h2>To do list</h2>
+    <div class="input-section">
+      
+      <input type="text" id="taskInput" placeholder="Write something...">
+      <button onclick="addTask()">Add</button>
+    </div>
+    <div class="taskList">hi</div>
+  </div>
   <script src="todolist.js"></script>
 </body>
 </html>
