--- a/todolist/todolist.html
+++ b/todolist/todolist.html
@@ -14,7 +14,7 @@
       <input type="text" id="taskInput" placeholder="Write something...">
       <button onclick="addTask()">Add</button>
     </div>
-    <div class="taskList">hi</div>
+    <div class="taskList"></div>
   </div>
   <script src="todolist.js"></script>
 </body>
