--- a/marker/marker.html
+++ b/marker/marker.html
@@ -88,7 +88,7 @@
 
             <section>
               <label for="comments">Any comments or suggestions?</label><br><br> 
-              <textarea rows="10" cols="50" id="comments" name="comments"  placeholder="Enter your comment here..."></textarea>
+              <textarea id="comments" name="comments"  placeholder="Enter your comment here..."></textarea>
             </section>
 
             <button id="submit">Submit</button>
